# snake.py

./: LICENSE  README.md  pyproject.toml
src/: main.py
